--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -165,26 +165,18 @@
       <div class="block-5 block-5-1 block-5-active">
         <h3>В период острого заболевания</h3>
         <div class="block-5__container">
+
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 1 года до 12 лет:</b> рассасывать до полного растворения по 1 таблетке каждые 2 часа (не больше 8 таблеток в сутки) до наступления улучшения
+              <b>Детям от 3 до 6 лет:</b> По 1 таблетке каждые 2 часа (не более 6 раз в день) до наступления улучшения
             </p>
             <div class="subcontainer">
-              <div class="subcontainer-particle-1">
-                <b>В ПЕРВЫЕ СУТКИ</b>
-                <b class="subtext">Каждые 2 часа</b>
-                <p>по 1 таблетке</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container pill8"></div>
-              </div>
               <div class="subcontainer-particle-1">
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
-                <b class="subtext">До выздоровления</b>
-                <p>1 таблетку 3 раза в сутки</p>
+                <b class="subtext">До полного выздоровления</b>
+                <p>По 1/2 таблетки 3 раза в день</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -193,26 +185,39 @@
             </div>
           </div>
 
+
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 12 лет и  взрослым:</b> рассасывать до полного растворения каждый час (не больше 12 таблеток в сутки) до наступления улучшения
+              <b>Детям от 6 до 12 лет:</b> По 1 таблетке каждый час (не более 7-8 раз в день) до наступления улучшения
             </p>
             <div class="subcontainer">
-              <div class="subcontainer-particle-1">
-                <b>В ПЕРВЫЕ СУТКИ</b>
-                <b class="subtext">Каждый час</b>
-                <p>по 1 таблетке</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container pill12"></div>
-              </div>
               <div class="subcontainer-particle-1">
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
-                <b class="subtext">До выздоровления</b>
-                <p>1-2 таблетки 3 раза в сутки</p>
+                <b class="subtext">До полного выздоровления</b>
+                <p>1 таблетки 3 раза в сутки</p>
+              </div>
+              <div class="subcontainer-particle-2">
+                <div class="clock-img"></div>
+                <div class="pill-container pill3"></div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="container__subcontainer">
+            <p>
+              <b>Детям старше 12 лет и взрослым:</b> По 1 таблетке или по 10 капель каждый час (не более 12 раз в день) до наступления улучшения
+            </p>
+            <div class="subcontainer">
+              <div class="subcontainer-particle-1">
+                <b>
+                  ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
+                </b>
+                <b class="subtext">До полного выздоровления</b>
+                <p>По 1-2 таблетки или по 10-20 капель 3 раза в день</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -222,19 +227,19 @@
           </div>
         </div>
         <p class="block-5__container-btext">
-          Длительность лечения  7-10 дней до полного выздоровления
+          Длительность лечения до полного выздоровления
         </p>
-        <h3>Для профилактики ОРВИ</h3>
+        <h3>Для профилактики респираторно-вирусной инфекции</h3>
 
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 1 до 12 лет:</b>  рассасывать по 1 таблетке 3 раза в сутки
+              <b>Детям от 3 до 6 лет:</b>  рассасывать по 1/2 таблетки 2 раза в день
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>В СУТКИ</b>
-                <p>не больше 3 таблеток</p>
+                <p>не больше 2 таблеток</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -245,12 +250,12 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Детям от 12 лет и взрослым:</b> рассасывать по 1-2 таблетке 3 рази в сутки
+              <b>Детям от 6 до 12 лет:</b> рассасывать по 1 таблетке 2 раза в день
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>В СУТКИ</b>
-                <p>не больше 6 таблеток</p>
+                <p>не больше 2 таблеток</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -258,6 +263,20 @@
               </div>
             </div>
           </div>
+
+          <div class="container__subcontainer">
+            <p>
+              <b>Детям старше 12 лет и взрослым:</b> по 1 таблетке или по 10-20 капель 3 раза в день
+            </p>
+            <div class="subcontainer vertical">
+              <div class="subcontainer-particle-2">
+                <div class="clock-img"></div>
+                <div class="pill-container pill6"></div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
         <div class="bottom-text">
           <p>
@@ -436,9 +455,14 @@
             </div>
 
             <div class="block-7">
-              <!-- <h2>Где купить</h2>
-              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf;"><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script> -->
-              <!-- <div class="block-7__img"></div> -->
+              <h2>Где купить</h2>
+              <div class="apt-container">
+                <a href="https://www.asna.ru/product/inflyutsid/"></a>
+                <a href="https://gorzdrav.org/catalog/infljucid/"></a>
+                <a href="https://www.piluli.ru/search_result.html?q=%D0%98%D0%BD%D1%84%D0%BB%D1%8E%D1%86%D0%B8%D0%B4"></a>
+                <a href="https://vitaexpress.ru/catalog/lekarstva-i-bady/lekarstva-ot-prostudy/inflyutsid-60-tab/"></a>
+                <a href="https://www.rigla.ru/search/%D0%98%D0%BD%D1%84%D0%BB%D1%8E%D1%86%D0%B8%D0%B4"></a>
+              </div>
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
                 <ol>
