--- a/influcid-RU/index.html
+++ b/influcid-RU/index.html
@@ -5,7 +5,7 @@
     <title>Influcid</title>
     <meta name="description" content="Influcid"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="shortcut icon" href="./images/ico.png" type="image/png"/>
+    <link rel="shortcut icon" href="./images/q10.png" type="image/png"/>
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
@@ -217,7 +217,7 @@
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
                 <b class="subtext">До полного выздоровления</b>
-                <p>По 1-2 таблетки или по 10-20 капель 3 раза в день</p>
+                <p>По 1-2 таблетки 3 раза в день</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -266,7 +266,7 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Детям старше 12 лет и взрослым:</b> по 1 таблетке или по 10-20 капель 3 раза в день
+              <b>Детям старше 12 лет и взрослым:</b> по 1 таблетке 3 раза в день
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-2">
@@ -351,6 +351,28 @@
               <p>Длительность приёма препарата Инфлюцид после контакта с больными на ОРВИ или грипп - 1 неделя;</p>
             </div>
           </div>
+        </div>
+
+        <p class="block-5__container-btext">
+          Длительность лечения до полного выздоровления
+        </p>
+        <h3>Для профилактики респираторно-вирусной инфекции</h3>
+
+
+        <div class="block-5__container">
+          <div class="container__subcontainer">
+            <p>
+              <b>Детям старше 12 лет и взрослым:</b>  по 10-20 капель 3 раза в день
+            </p>
+            <div class="subcontainer vertical">
+              <div class="subcontainer-particle-2">
+                <div class="clock-img"></div>
+                <div class="pill-container drop10"></div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
 
 
