--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -5,7 +5,8 @@
     <title>Influcid</title>
     <meta name="description" content="Influcid"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="shortcut icon" href="./images/ico.png" type="image/png"/>
+    <link rel="shortcut icon" href="./images/q10.png" type="image/png"/>
+    
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style.css"/>
