--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -350,7 +350,7 @@
               <div class="block-6__container-text"><p>Epidemioloji mövsüm başlandı və artıq ona hazırlaşmaq lazımdır. Diqqət yetirin ki, qriplə KRVİ (kəskin respirator virus infeksiyası) arasındakı fərq ondan ibarətdir ki, qripin törədiciləri qrip virusunun müxtəlif ştamlarıdır (virusun bir növünün variantları, bunlar bir sıra xüsusiyyətləri üzrə fərqlənirlər), KRVİ-nın törədiciləri isə çox vaxt bir-biri ilə genetik bağlı olmayan və müxtəlif xəstəlik qruplarına məxsus olan 200-dən çox müxtəlif viruslardır. </p>
                 <p>2019-2020-ci il yeni mövsümündə nələr baş verə bilər?</p>
               </div>
-              <button class="accordion">Детальнiше</button>
+              <button class="accordion">daha ətraflı</button>
               <div class="panel">
                 <p>ÜST-nın hesablamalarına əsasən yeni epidemik mövsüm ərzində Şimal yarımkürəsində aşağıdakı qrip virusları dövr edəcək:</p>
                 <ul>
@@ -395,7 +395,7 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
               <div class="block-6__container-text"><p>
                 Təəssüf ki, bütün ömrü boyu uşağı soyuqdəymədən tam qorumaq mümkün deyil. Xüsusən ona görə ki, Sizin uşağınız öz həmyaşıdlarının əhatəsində olur. Uşaq bağçasında və ya məktəbdə bir uşağın xəstələnməsi kifayət edir ki, infeksiyanın sürətlə ötürülməsi baş versin. Uşağın xəstəliyi ananın tez-tez işdən məzuniyyət götürməsi ilə nəticələnir. Bu zaman suallar yaranır: ”Soyuqdəyməni necə tez müalicə etmək olar? Soyuqdəyməyə qarşı ən yaxşı dərman hansıdır? Soyuqdəymədən tez xilas olmaq olarmı? Soyuqdəymənin nadir hallarda olması və maksimum ağrısız keçməsi üçün nə etmək olar?” </p>
               </div>
-              <button class="accordion">Детальнiше</button>
+              <button class="accordion">daha ətraflı</button>
               <div class="panel">
                 <p>6 aylıqdan 12 yaşadək uşaqlarda soyuqdəymə hallarının sayı daha çox olur.    
                     Uşaqlarda soyuqdəymə və KRVİ effektiv müalicəsi aşağıdakı ilkin əlamətlərə dərhal reaksiya verilməsini tələb edir:</p>
@@ -451,18 +451,19 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
 <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
 <!--            </ol>-->
             <p>
-              Реклама лікарського засобу. Перед застосуванням уважно ознайомтесь з інструкцією та проконсультуйтеся з лікарем. Зберігати у недоступному для дітей місці. Інфлюцид таб. Р.П. № UA/6740/01/01 від 08.11.2017. Інфлюцид краплі Р.П. № UA/6740/02/01 від 13.12.2017.
+              Официальный представитель в Азербайджане:
               <br>
-              Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул.Лісна, 30а, м.Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03
+              юр. адресс ____ Тел./факс: ____ www.alpenpharma.com
+              <br>
+              :Email__
             </p>
             <div class="logos-container">
-              <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>DHU (Німеччина)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
+              <a class="disclamer-tra__logo" href=""><p><b>Производитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Импортер:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>Samolečenje može biti opasno po Vaše zdravlje.
-              Prije uporabe pažljivo pročitajte Uputu o lijeku. Za obavijesti o indikacijama, mjerama opreza i nuspojavama upitajte svog liječnika ili farmaceuta.</p>
+            <p>Əks göstərişlər mövcuddur, istifadə etməzdən əvvəl həkim ilə məsləhətləşin</p>
           </div>
 
 
