--- a/influcid-RS/index.html
+++ b/influcid-RS/index.html
@@ -31,7 +31,7 @@
         <a name='block-nav'></a>
         <div class="navigation-logo">
           <a  href="#block-nav" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Gde naći</a>
+<!--          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Gde naći</a>-->
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -50,7 +50,7 @@
               <a class="navmenu" href="#block-2" >Delovanje</a>
               <a class="navmenu" href="#block-3" >Sastav</a>
               <a class="navmenu" href="#block-4" >Način primene</a>
-              <a class="where-to-buy" href="#block-5" >Gde naći</a>
+<!--              <a class="where-to-buy" href="#block-5" >Gde naći</a>-->
             <!-- <a href="index.html" >ua</a> -->
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -155,14 +155,14 @@
       <a name="block-4"></a>
       <div class="block-4">
         <h2>NAČIN PRIMENE</h2>
-        <div class="change-box">
-          <div>
-            <p class=" p-btn1 active-btn">Таблетки</p>
-          </div>
-          <div>
-            <p class="p-btn2">Капли</p>
-          </div>
-        </div>
+<!--        <div class="change-box">-->
+<!--          <div>-->
+<!--            <p class=" p-btn1 active-btn">Таблетки</p>-->
+<!--          </div>-->
+<!--          <div>-->
+<!--            <p class="p-btn2">Капли</p>-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
       <div class="block-5 block-5-1 block-5-active">
         <h3>Tokom trajanja bolesti</h3>
@@ -358,7 +358,7 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
               <div class="block-6__container-text"><p>Očekivana sezona kada se javljaju epidemije gripa je u jeku. Obratite pažnju da je razlika gripa i prehlade (drugih virusnih infekcija dišnih puteva) u tome što je uzročnik gripa jedan virus – virus gripa. Često se dešava da više varijacija ovog virusa izaziva grip. Uzrok prehlade su različiti virusi i do sada je detektovano čak 200 različitih virusa.</p>
                 <p>Šta možemo da očekujemo u sezoni 2019 – 2020?</p>
               </div>
-              <button class="accordion">Подробнее</button>
+              <button class="accordion">детаљније</button>
               <div class="panel">
                 <p>Prema izveštaju Svetske zdravstvene organizacije  tokom nove sezone epidemije u severnoj hemisferi virus gripa će biti aktivan u sledećim oblicima:</p>
                 <ul>
@@ -404,7 +404,7 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
                 U toj situaciji je potrebno rešenje. Koji je najbolji lek za prehladu? Da li moguće brzo rešiti prehladu? Šta se može učiniti da se dečja prehlada brzo i bezbolno reši?
               </p>
               </div>
-              <button class="accordion">Подробнее</button>
+              <button class="accordion">детаљније</button>
               <div class="panel">
                 <p>Najveći broj prehlada se javlja kod dece od 6 mesca do 12 godine, u periodu intenzivnog razvoja imunog sistema. 
                     Za efikasno lečenje prehalde i drugih virusnih infekcija disajnih puteva potrebna je brza reakcija. Bitno je prepoznati prve simptome:</p>
@@ -440,7 +440,7 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
 
             <div class="block-7">
               <h2>GDE KUPITI – U APOTECI</h2>
-              <!-- <div class="block-7__img"></div> -->
+               <a href="" class="block-7__img"></a>
               <div class="block-7__text">
                 <h3>Reference</h3>
                 <ol>
@@ -473,12 +473,12 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
               515-01-03934-17-001 od 03.10.2018.
             </p>
             <div class="logos-container">
-              <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>DHU (Німеччина)<br>https://www.dhu.de/</p></a>
-              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
+              <a class="disclamer-tra__logo" href=""></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>Samolečenje može biti opasno po Vaše zdravlje.</p>
+            <p>Prije upotrebe pažljivo proučiti uputstvo. O indikacijama, merama opreza i neželjenim reakcijama na lek, posavetujte se sa lekarom ili farmaceutom.</p>
           </div>
 
 
