--- a/influcid-BY/index.html
+++ b/influcid-BY/index.html
@@ -429,7 +429,7 @@
 
             <div class="block-7">
               <h2>Где купить</h2>
-              <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=">Где купить</a>
+              <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request= %D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B0%D0%BD">Где купить</a>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
