--- a/influcid-KZ/index.html
+++ b/influcid-KZ/index.html
@@ -17,12 +17,12 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <div class="alert-license">
+    <!-- <div class="alert-license">
       <a href="license.html">
         Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
       </a>
       <button class="license-off"><p>Slažem se</p></button>
-    </div>
+    </div> -->
 	<header class="App-header">
 
 
@@ -39,7 +39,7 @@
                 <li><a class="navmenu" href="#block-3" >Құрамы</a></li>
                 <li><a class="navmenu" href="#block-4" >Қалай қабылдау керек</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-<!--                <li><a href="index-ru.html" >ru</a></li>-->
+                <li><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -49,7 +49,7 @@
               <a class="navmenu" href="#block-3" >Құрамы</a>
               <a class="navmenu" href="#block-4" >Қалай қабылдау керек</a>
               <a class="where-to-buy" href="#block-5" >Қайдан сатып алуға болады</a>
-<!--              <a href="index-ru.html" >ru</a>-->
+              <a href="index-ru.html" >ru</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">Нұсқаулық</p></a
@@ -167,7 +167,8 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>1 жастан 12 жасқа дейінгі балалар:</b> Жақсаруы басталғанша 1 таблеткадан (бірақ күніне 8 таблеткадан асырмай) әрбір 2 сағат сайын қабылдайды
+              <b>1 жастан 12 жасқа дейінгі балалар:</b> жақсаруы басталғанша 1 таблеткадан (бірақ күніне 8 таблеткадан асырмай) әрбір екі сағат сайын <br>
+              одан әрі –1 таблеткадан күніне 3 рет қабылдайды.
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -184,7 +185,7 @@
                   ӘРІ ҚАРАЙ ЕМДЕУ ҮШІН
                 </b>
                 <b class="subtext">Сауығып кеткенге</b>
-                <p>дейін 1 таблеткадан күніне 3 рет /p>
+                <p>дейін 1 таблеткадан күніне 3 рет </p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -246,7 +247,8 @@
 
           <div class="container__subcontainer">
             <p>
-              <b>Ересектер мен 12 жастағы балалар:</b> 1-2 таблеткадан күніне 3 рет қабылдайды
+              <b>Ересектер мен 12 жастағы балалар:</b> жақсаруы басталғанша 1 таблеткадан (бірақ күніне 12 таблеткадан асырмай) әрбір сағат сайын <br>
+              одан әрі –1-2 таблеткадан күніне 3 рет қабылдайды.
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
@@ -276,72 +278,72 @@
         <a class="buy-btn pill-btn"><p>Қайдан сатып алуға болады</p></a>
       </div>
 
-      <div class="block-5 block-5-2 block-5-disable">
-        <div class="block-5__container">
-          <div class="container__subcontainer">
-            <h4>При гострому захворюванні</h4>
-            <p>
-              <b>Дітям старше 12 років і дорослим:</b> приймати по 10 крапель кожну годину (не більше 12 прийомів на добу) до настання покращання
-            </p>
-            <div class="subcontainer">
-              <div class="subcontainer-particle-1">
-                <b>У ПЕРШУ ДОБУ</b>
-                <b class="subtext">Кожну годину</b>
-                <p>по 10 крапель</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container drop10"></div>
-              </div>
-              <div class="subcontainer-particle-1">
-                <b>
-                  ПРИ ПОДАЛЬШОМУ<br />ЛІКУВАННІ
-                </b>
-                <b class="subtext">До одужання</b>
-                <p>по 10 крапель 3 рази на добу</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container drop10"></div>
-              </div>
-              <p>Тривалість лікування 7-10 днів (до повного зникнення симптомів)</p>
-            </div>
-          </div>
+<!--      <div class="block-5 block-5-2 block-5-disable">-->
+<!--        <div class="block-5__container">-->
+<!--          <div class="container__subcontainer">-->
+<!--            <h4>При гострому захворюванні</h4>-->
+<!--            <p>-->
+<!--              <b>Дітям старше 12 років і дорослим:</b> приймати по 10 крапель кожну годину (не більше 12 прийомів на добу) до настання покращання-->
+<!--            </p>-->
+<!--            <div class="subcontainer">-->
+<!--              <div class="subcontainer-particle-1">-->
+<!--                <b>У ПЕРШУ ДОБУ</b>-->
+<!--                <b class="subtext">Кожну годину</b>-->
+<!--                <p>по 10 крапель</p>-->
+<!--              </div>-->
+<!--              <div class="subcontainer-particle-2">-->
+<!--                <div class="clock-img"></div>-->
+<!--                <div class="pill-container drop10"></div>-->
+<!--              </div>-->
+<!--              <div class="subcontainer-particle-1">-->
+<!--                <b>-->
+<!--                  ПРИ ПОДАЛЬШОМУ<br />ЛІКУВАННІ-->
+<!--                </b>-->
+<!--                <b class="subtext">До одужання</b>-->
+<!--                <p>по 10 крапель 3 рази на добу</p>-->
+<!--              </div>-->
+<!--              <div class="subcontainer-particle-2">-->
+<!--                <div class="clock-img"></div>-->
+<!--                <div class="pill-container drop10"></div>-->
+<!--              </div>-->
+<!--              <p>Тривалість лікування 7-10 днів (до повного зникнення симптомів)</p>-->
+<!--            </div>-->
+<!--          </div>-->
 
-          <div class="container__subcontainer">
-            <h4>Для профілактики ГРВІ</h4>
-            <p>
-              <b>Дітям від 12 років і дорослим:</b>
-            </p>
-            <div class="subcontainer">
-              <div class="subcontainer-particle-1">
-                <b>
-                  ТРИ РАЗИ НА ДОБУ
-                </b>
-                <p>по 10 крапель</p>
-              </div>
-              <div class="subcontainer-particle-2">
-                <div class="clock-img"></div>
-                <div class="pill-container drop10"></div>
-              </div>
-              <p>Тривалість застосування препарату Інфлюцид після контакту з хворими на ГРВІ або грип — 1 тиждень;</p>
-            </div>
-          </div>
-        </div>
+<!--          <div class="container__subcontainer">-->
+<!--            <h4>Для профілактики ГРВІ</h4>-->
+<!--            <p>-->
+<!--              <b>Дітям від 12 років і дорослим:</b>-->
+<!--            </p>-->
+<!--            <div class="subcontainer">-->
+<!--              <div class="subcontainer-particle-1">-->
+<!--                <b>-->
+<!--                  ТРИ РАЗИ НА ДОБУ-->
+<!--                </b>-->
+<!--                <p>по 10 крапель</p>-->
+<!--              </div>-->
+<!--              <div class="subcontainer-particle-2">-->
+<!--                <div class="clock-img"></div>-->
+<!--                <div class="pill-container drop10"></div>-->
+<!--              </div>-->
+<!--              <p>Тривалість застосування препарату Інфлюцид після контакту з хворими на ГРВІ або грип — 1 тиждень;</p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
 
 
-        <div class="bottom-text">
-          <p>
-            Застосування препарату при перших проявах симптомів ГРВІ та грипу або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання;
+<!--        <div class="bottom-text">-->
+<!--          <p>-->
+<!--            Застосування препарату при перших проявах симптомів ГРВІ та грипу або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання;-->
 
-          </p>
-          <p>
-            Краплі розчину приймають за 30 хвилин до або через 30 хвилин після їди, потримавши їх деякий час у роті перед тим як проковтнути. Препарат можна розчиняти у невеликій кількості води (наприклад, у чайній ложці води).
-          </p>
-        </div>
-        <a class="buy-btn">Де купити</a>
-      </div>
+<!--          </p>-->
+<!--          <p>-->
+<!--            Краплі розчину приймають за 30 хвилин до або через 30 хвилин після їди, потримавши їх деякий час у роті перед тим як проковтнути. Препарат можна розчиняти у невеликій кількості води (наприклад, у чайній ложці води).-->
+<!--          </p>-->
+<!--        </div>-->
+<!--        <a class="buy-btn">Де купити</a>-->
+<!--      </div>-->
 
 
         <div class="block-6">
@@ -428,6 +430,7 @@
             <div class="block-7">
               <h2>Қайдан сатып алуға болады</h2>
               <!-- <div class="block-7__img"></div> -->
+
               <div class="block-7__text">
                 <h3>Дәлелдемелер базасы</h3>
                 <ol>
@@ -461,7 +464,11 @@
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>ӨЗ-ӨЗІҢІЗДІ ЕМДЕУ ДЕНСАУЛЫҒЫҢЫЗҒА ҚАУІПТІ БОЛУЫ МҮМКІН</p>
+            <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ, НЕОБХОДИМО ПРОКОНСУЛЬТИРОВАТЬСЯ СО СПЕЦИАЛИСТОМ<br>
+
+              ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ И ПРОКОНСУЛЬТИРУЙТЕСЬ У ВРАЧА.<br>
+
+              ПРЕПАРАТ ЗАРЕГИСТРИРОВАН И РАЗРЕШЕН К ПРИМЕНЕНИЮ В РЕСПУБЛИКЕ КАЗАХСТАН ЛИЦЕНЗ. № ФД64605036Р ОТ 06.09.2007 Г.</p>
           </div>
 
 
