--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -17,12 +17,12 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <div class="alert-license">
+    <!-- <div class="alert-license">
       <a href="license.html">
         Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
       </a>
       <button class="license-off"><p>Slažem se</p></button>
-    </div>
+    </div> -->
 	<header class="App-header">
 
 
@@ -428,7 +428,7 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
 
             <div class="block-7">
               <h2>HARADAN ALMALI</h2>
-              <!-- <div class="block-7__img"></div> -->
+              <div class="block-7__img"></div>
               <div class="block-7__text">
                 <h3>Sübutedici baza</h3>
                 <ol>
