--- a/influcid/index.html
+++ b/influcid/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
 
-      <a class="fixed-link" href="">замовити доставку</a>
+      <a class="fixed-link" href="https://liki24.com/index.php?route=checkout%2Fcustom_cart&cart_id=57214&utm_source=inflyucid-60&utm_medium=referral&utm_campaign=inflyucid">замовити доставку</a>
 
         <div class="main-img-container"></div>
         <a name="block-1"></a>
