--- a/influcid-KZ/index-kz.html
+++ b/influcid-KZ/index-kz.html
@@ -453,28 +453,26 @@
 <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
 <!--            </ol>-->
             <p>
-              Дәрілік препарат жарнамасы. Қолданар алдында нұсқаулықпен мұқият танысыңыз, дәрігермен кеңесіңіз. <br>
-              Балалардың қолы жетпейтін жерде сақтаңыз.
-              <br>
+              
             </p>
 
-            <p>Информация о дистрибьютере – Alpen Pharma Kazakhstan<br>
-Адрес организации, принимающей на территории Республики Казахстан претензии от потребителей по качеству продукции (товара): ТОО «Альпен Фарма» Республика Казахстан, Алматинская область, Карасайский район, Ельтайский сельский округ, с.Кокузек, строение 1044<br>
+            <p>Дистрибьютер туралы ақпарат – Alpen Pharma Kazakhstan<br>
+Эксклюзивті өкілі: Қазақстан Республикасы аумағында тұтынушылардан өнім (тауар) сапасына қатысты шағымдарды қабылдайтын ұйымның мекенжайы:
+«Альпен Фарма» ЖШС Қазақстан Республикасы, Алматы обл., Қарасай ауданы, Елтай а.о., Көкөзек а., 1044<br>
 Тел.\факс: +7 (727) 226 53 06 +7 (727) 226 98 33 +7 (727) 226 53 66<br>
 E-mail: info.kazakhstan@alpenpharma.com</p>
-<p>Информация о производителе – завод DHU<br>
-Дойче Хомеопати-Унион ДХУ-Арцнаймиттель ГмбХ & Ко. КГ Оттоштрассе 24, 76227 Карлсруэ, Германия.</p>
+<p>Өндіруші туралы ақпарат – DHU зауыты
+Дойче Хомеопати-Унион ДХУ-Арцнаймиттель ГмбХ & Ко. КГ<br>
+Оттоштрассе 24, 76227 Карлсруэ, Германия.</p>
             <div class="logos-container">
               <a class="disclamer-tra__logo" href=""></a>
               <a class="disclamer-tra__alpen" href="http://alpenpharma.com"></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ, НЕОБХОДИМО ПРОКОНСУЛЬТИРОВАТЬСЯ СО СПЕЦИАЛИСТОМ<br>
-
-              ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ И ПРОКОНСУЛЬТИРУЙТЕСЬ У ВРАЧА.<br>
-
-              ПРЕПАРАТ ЗАРЕГИСТРИРОВАН И РАЗРЕШЕН К ПРИМЕНЕНИЮ В РЕСПУБЛИКЕ КАЗАХСТАН ЛИЦЕНЗ. № ФД64605036Р ОТ 06.09.2007 Г.</p>
+            <p>ҚАРСЫ ӘРЕКЕТТЕРІ БАР, МАМАННАН КЕҢЕС АЛУ КЕРЕК.<br>
+ҚОЛДАНАР АЛДЫНДА НҰСҚАУЛЫҚПЕН ТАНЫСУ КЕРЕК ЖӘНЕ ДӘРІГЕРДЕН КЕҢЕС АЛУ КЕРЕК.<br>
+ПРЕПАРАТ ҚАЗАҚСТАН РЕСПУБЛИКАСЫНДА ТІРКЕЛГЕН ЖӘНЕ ОНЫ ҚОЛДАНУҒА РҰҚСАТ ЕТІЛГЕН, ЛИЦЕНЗ. № ФД64605036Р  06.09.2007 Ж. БЕРІЛГЕН</p>
           </div>
 
 
