--- a/influcid-KZ/index-kz.html
+++ b/influcid-KZ/index-kz.html
@@ -51,7 +51,7 @@
               <a class="where-to-buy" href="#block-5" >Қайдан сатып алуға болады</a>
               <a href="index.html" >ru</a>
           </div>
-          <a class="instruction" href="./instruction.pdf"
+          <a class="instruction" href="./instruction-kz.pdf"
           ><p class="translated-text" key="instruction">Нұсқаулық</p></a
           >
         </div>
