--- a/influcid-KZ/index.html
+++ b/influcid-KZ/index.html
@@ -490,7 +490,9 @@ E-mail: info.kazakhstan@alpenpharma.com</p>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
+            <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ, НЕОБХОДИМО ПРОКОНСУЛЬТИРОВАТЬСЯ СО СПЕЦИАЛИСТОМ<br>
+ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ И ПРОКОНСУЛЬТИРУЙТЕСЬ У ВРАЧА.<br>
+ПРЕПАРАТ ЗАРЕГИСТРИРОВАН И РАЗРЕШЕН К ПРИМЕНЕНИЮ В РЕСПУБЛИКЕ КАЗАХСТАН ЛИЦЕНЗ. № ФД64605036Р ОТ 06.09.2007 Г.</p>
           </div>
 
 
