--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -282,6 +282,8 @@
         <a class="source source-3" href="https://www.ljekarna-marusic.hr/proizvodi/9381/alpikol-sirup-120-ml/"></a>
         <a class="source source-4" href="https://ljekarna-fett.hr/product/alpikol-sirup/"></a>
         <a class="source source-5" href="https://www.ljekarnaljubic.com/shop/dodaci-prehrani-kat/vitamini-i-minerali/alpikol-sirup-120-ml/"></a>
+        <a class="source source-6" href="https://www.farmacia.hr/brandovi/alpen-pharma/alpikol-sirup-za-zastitu-organizma/"></a>
+        <a class="source source-7" href="https://www.ljekarna-dajkovic.hr/hr/web-shop-en/dodaci-prehrani/alpikol-sirup-120-ml-detail"></a>
       </div>
 
     </map>
