--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -39,7 +39,7 @@
             </li>
             <li>
               <a class="translated-text navmenu" key="g5" href="#map"
-                >KONTAKT</a
+                >GDJE KUPITI</a
               >
             </li>
 <!--            <li><a class="translateBtn active" language="ua">hr</a></li>-->
@@ -49,13 +49,13 @@
       </div>
       <div class="desctop-navigation">
         <a class="translated-text navmenu" key="g1" href="#diagnosis"
-          >KADA PRIMJENIIT</a
+          >KADA PRIMIJENITI</a
         >
         <a class="translated-text navmenu" key="g2" href="#overrun">SASTAV</a>
         <a class="translated-text navmenu" key="g3" href="#composition"
           >NAČIN PRIMJENE</a
         >
-        <a class="translated-text navmenu" key="g5" href="#map">KONTAKT</a>
+        <a class="translated-text navmenu" key="g5" href="#map">GDJE KUPITI </a>
 <!--        <a class="translateBtn language active" language="ua">hr</a>-->
         <!--      <a class="translateBtn language" language="ru">ru</a>-->
       </div>
