--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -203,9 +203,11 @@
           <!--          //////-->
         </div>
       </div>
+      <a name="overrun"></a>
+
       <h3>Sastav ALPIKOL</h3>
     </div>
-    <a name="overrun"></a>
+    
 
     <div class="block-4">
         <div class="block-4__buttons">
@@ -216,7 +218,7 @@
         <div class="block-4__container">
             <div class="block-4__container-img"></div>
             <div class="block-4__container-content">
-                <h4><br><p>Sambucus nigra</p></h4>
+                <h4>Ekstrakt ploda crne bazge<br><p>Sambucus nigra</p></h4>
               <p>Standardiziran na 10% polifenola
               </p>
                 <p>
@@ -268,12 +270,14 @@
           Ne preporučuje se uzimanje duže od 2 tjedna u kontinuitetu.<br>
           Nakon otvaranja proizvod čuvati u hladnjaku i upotrijebiti u roku 2 tjedna.<br>
           Bez konzervansa, bez umjetnih boja i aroma.
+          <a name="map"></a>
         </p>
+
     </div>
 
 
 
-    <a name="map"></a>
+    
     <map>
       <h3 class="translated-text" key="buy-text">GDJE KUPITI</h3>
       <div class="map-content">
